Add a failing test

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,14 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <!-- Alt_2: Add the following dependency
